--- a/Day3/Day3.csproj
+++ b/Day3/Day3.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Day3.Program6</StartupObject>
+    <StartupObject>Day3.Startup</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -52,8 +52,12 @@
     <Compile Include="Program4.cs" />
     <Compile Include="Program5.cs" />
     <Compile Include="Program6.cs" />
+    <Compile Include="Program7.cs" />
+    <Compile Include="Program8.cs" />
+    <Compile Include="Program9.cs" />
     <Compile Include="Quiz3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
